# react-fileexplorer

./: .flaskenv  .gitignore  pyproject.toml
client/: package-lock.json  package.json
client/src/: Breadcrumbs.css  Breadcrumbs.js  Button.css  DirectoryContents.js  FileExplorer.css  FileExplorer.js  SimpleStlCanvas.js  StlCanvas.css  StlCanvas.js  Table.css  VisCanvas.css  VisCanvas.js  index.css  index.js
src/fileexplorer/: __init__.py  db_builder.py  image_proc.py  models.py  pdf_proc.py  proc.py  routes.py  stl_proc.py
tests/: test_api.py  test_image_proc.py  test_pdf_proc.py  test_proc.py
